# arbitrage

./: .env.example  .gitignore  CMakeLists.txt  README.md
.claude/skills/run-instrument_loader/: SKILL.md  smoke.sh
arbitrage_scanner/src/: main.cpp
arbitrage_scanner/src/config/: ScannerConfig.h
arbitrage_scanner/src/core/: ArbitrageDetector.cpp  ArbitrageDetector.h  CompositeOpportunitySink.h  Opportunity.h  OpportunitySink.h  RedisOpportunitySink.cpp  RedisOpportunitySink.h
balance_cli/src/: main.cpp
common/config/: Config.h
common/core/: QuoteSnapshotFileFormat.h  QuoteSnapshotFileReader.cpp  QuoteSnapshotFileReader.h  QuoteStore.cpp  QuoteStore.h
common/database/: DatabaseRepository.cpp  DatabaseRepository.h
common/execution/: BinanceExecutionConnector.cpp  BinanceExecutionConnector.h  BitgetExecutionConnector.cpp  BitgetExecutionConnector.h  BybitExecutionConnector.cpp  BybitExecutionConnector.h  HmacSigner.cpp  HmacSigner.h  IExecutionConnector.h  OrderSubmitter.cpp  OrderSubmitter.h
common/marketdata/: BinanceFutMarketDataConnector.cpp  BinanceFutMarketDataConnector.h  BinanceMarketDataConnector.cpp  BinanceMarketDataConnector.h  BingxFutMarketDataConnector.cpp  BingxFutMarketDataConnector.h  BingxSpotMarketDataConnector.cpp  BingxSpotMarketDataConnector.h  BitgetFutMarketDataConnector.cpp  BitgetFutMarketDataConnector.h  BitgetSpotMarketDataConnector.cpp  BitgetSpotMarketDataConnector.h  BybitFutMarketDataConnector.cpp  BybitFutMarketDataConnector.h  BybitMarketDataConnector.cpp  BybitMarketDataConnector.h  CoinexFutMarketDataConnector.cpp  CoinexFutMarketDataConnector.h  CoinexSpotMarketDataConnector.cpp  CoinexSpotMarketDataConnector.h  GateioFutMarketDataConnector.cpp  GateioFutMarketDataConnector.h  GateioSpotMarketDataConnector.cpp  GateioSpotMarketDataConnector.h  Gzip.cpp  Gzip.h  HeartbeatTimer.cpp  HeartbeatTimer.h  HtxFutMarketDataConnector.cpp  HtxFutMarketDataConnector.h  HtxSpotMarketDataConnector.cpp  HtxSpotMarketDataConnector.h  IMarketDataConnector.h  KrakenFutMarketDataConnector.cpp  KrakenFutMarketDataConnector.h  KrakenSpotMarketDataConnector.cpp  KrakenSpotMarketDataConnector.h  KucoinFutMarketDataConnector.cpp  KucoinFutMarketDataConnector.h  KucoinSpotMarketDataConnector.cpp  (+16 more)
common/models/: ExecutionReport.h  Fill.h  Instrument.h  Order.h  QuoteSnapshotRow.h  QuoteUpdateStatRow.h  Symbol.h  TrackedSymbol.h
common/network/: HttpClient.cpp  HttpClient.h
common/security/: SecretsStore.cpp  SecretsStore.h
execution_cli/src/: main.cpp
execution_service/src/: main.cpp
execution_service/src/config/: ExecutionConfig.h
execution_service/src/core/: OrderIntake.cpp  OrderIntake.h  OrderRouter.cpp  OrderRouter.h  ReportPublisher.cpp  ReportPublisher.h
market_data_feed/src/: main.cpp
market_data_feed/src/config/: MarketDataFeedConfig.h
position_cli/src/: main.cpp
quote_recorder/src/: main.cpp
quote_recorder/src/config/: RecorderConfig.h
quote_recorder/src/core/: QuoteSnapshotFileWriter.cpp  QuoteSnapshotFileWriter.h  QuoteSnapshotWriter.cpp  QuoteSnapshotWriter.h
scripts/: run_execution_service.sh
secrets_cli/src/: main.cpp
spread_builder/src/: main.cpp
spread_builder/src/core/: SpreadSeriesBuilder.cpp  SpreadSeriesBuilder.h
src/: main.cpp
src/connectors/: BinanceConnector.cpp  BinanceConnector.h  BinanceFutConnector.cpp  BinanceFutConnector.h  BingxFutConnector.cpp  BingxFutConnector.h  BingxSpotConnector.cpp  BingxSpotConnector.h  BitgetFutConnector.cpp  BitgetFutConnector.h  BitgetSpotConnector.cpp  BitgetSpotConnector.h  BybitConnector.cpp  BybitConnector.h  BybitFutConnector.cpp  BybitFutConnector.h  CoinexFutConnector.cpp  CoinexFutConnector.h  CoinexSpotConnector.cpp  CoinexSpotConnector.h  GateioFutConnector.cpp  GateioFutConnector.h  GateioSpotConnector.cpp  GateioSpotConnector.h  HtxFutConnector.cpp  HtxFutConnector.h  HtxSpotConnector.cpp  HtxSpotConnector.h  IExchangeConnector.h  KrakenFutConnector.cpp  KrakenFutConnector.h  KrakenSpotConnector.cpp  KrakenSpotConnector.h  KucoinFutConnector.cpp  KucoinFutConnector.h  KucoinSpotConnector.cpp  KucoinSpotConnector.h  MexcFutConnector.cpp  MexcFutConnector.h  MexcSpotConnector.cpp  (+5 more)
